kubernetes/frontend/kuber-frontend-Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: momo-frontend
  labels:
    app: momo-frontend
spec:
  replicas: 1
  # сохранение историй ревизий
  revisionHistoryLimit: 12
  # Стратегия развёртывания. Recreate — удалит сначала все старые Pod'ы 
  # Есть и более гибкая стратегии, например, RollingUpdate, которая будет обновлять Pod'ы порциями  
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: momo-frontend
  template:
    metadata:
      labels:
        app: momo-frontend
    # шаблон для создания Pod'ов
    spec:
      containers:
        - image: gitlab.praktikum-services.ru:5050/std-int-005-006/momo-store/momo-frontend:1.0.2324764
          name: momo-frontend
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - name: momo-frontend
              containerPort: 80
      # чтобы Кубер мог скачивать образы из нашего GitLab Registry  
      imagePullSecrets:
        - name: docker-config-secret
