kubernetes/frontend/kuber-frontend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: momo-frontend
  labels:
    app: momo-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: momo-frontend
