kubernetes/frontend/kuber-frontend-ingress.yaml
# frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: momo-frontend
  annotations:
    cert-manager.io/cluster-issuer: "http01-clusterissuer"
spec:
  # В кластере может быть несколько Ingress Controllers, мы используем NGINX
  ingressClassName: "nginx"
  tls:
    - hosts:
        # это должно соответствовать ресурсной записи в ДНС
        - "momo.std-int-005-06.su"
      # с этим именем по запросу от Ingress Controller контроллер Certificate Manager сохранит полученный сертификат TLS. Вручную тебе его создавать не нужно
      secretName: momo-std-int-005-006-k8s-tls-secret
  rules:
    - host: "momo.std-int-005-06.su"
      http:
        # Для различных путей в URL можно указать различные бэкенд-сервисы
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              # Заранее создан сервис типа ClusterIP
              # Он выступает в качестве бэкенда нашего Ingress
              name: momo-frontend
              port:
                # У сервиса может быть несколько портов, указываем нужный нам
                number: 80
